<resources>
    <string name="app_name">Pocket</string>

    <string name="acctxt1">ACCOUNT</string>

    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="category">Category</string>
    <string name="select_category">Select Category</string>
    <string name="date">Date</string>
    <string name="choose_date">Choose Date</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="note">Note</string>
    <string name="write_something">Write Something...</string>
    <string name="save">Save</string>
    <string name="expenses">Expenses</string>
    <string name="accbtn1">Add Account</string>
    <string name="acttxt2">Name</string>
    <string name="acttxt3">Account No</string>
    <string name="acctxt4">Type</string>
    <string name="acctxt5">Amount</string>
    <string name="actbox1">Enter Account Name</string>
    <string name="accttxt6">Bank</string>
    <string name="actbox2">Enter Bank Name</string>
    <string name="actbox3">Enter Balance</string>
    <string name="actbox4">Enter Account No</string>
    <string name="actbox5">Select Account Type</string>

    <string name="type_prompt">Choose account type</string>
    <string-array name="spinner2">
        <item>Savings</item>
        <item>Fixed Deposits</item>
    </string-array>
    <string name="viewact1">Accounts</string>
    <string name="viewactbtn1">Default Account</string>
    <string name="viewactbtn2">+  Add Account</string>
    <string name="title_activity_userlogin">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logintxt1">POCKET</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
</resources>
